Replaced primitive wrapper constructor calls with valueOf static factory method calls.
Constructors such as new Integer(i) have been deprecated in Java 9.
Integer.valueOf(i) caches frequently used values and offers better
performance.