@@ -669,7 +669,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.PushDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -704,7 +704,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TripDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -746,7 +746,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.GrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -760,7 +760,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                             "PhysicalDisplay.CounterGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                     target.getDisplayName(),
                                     toHit.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHit.getValue(),
                                                     ce().getCrew()
@@ -793,7 +793,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BreakGrappleDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -829,7 +829,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.BAVibroClawDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -895,7 +895,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.JumpJetDialog.message", new Object[] { //$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
@@ -1055,7 +1055,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.ProtoMechAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 proto.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 proto.getValue(),
                                                 ce().getCrew()
@@ -1089,7 +1089,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.LayExplosivesAttackDialog.message", new Object[] {//$NON-NLS-1$
                                 explo.getValueAsString(),
-                                new Double(Compute.oddsAbove(explo.getValue())),
+                                Double.valueOf(Compute.oddsAbove(explo.getValue())),
                                 explo.getDesc() });
         if (clientgui.doYesNoDialog(title, message)) {
             disableButtons();
@@ -1157,14 +1157,14 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.LAHit", new Object[] {//$NON-NLS-1$
                                     toHitLeft.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitLeft.getValue(),
                                                     ce().getCrew()
                                                             .getOptions()
                                                             .booleanOption(
                                                                     OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageLeft) });
+                                    Integer.valueOf(damageLeft) });
         }
 
         // If we can hit with the right arm, get
@@ -1176,14 +1176,14 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                     .getString(
                             "PhysicalDisplay.RAHit", new Object[] {//$NON-NLS-1$
                                     toHitRight.getValueAsString(),
-                                    new Double(
+                                    Double.valueOf(
                                             Compute.oddsAbove(
                                                     toHitRight.getValue(),
                                                     ce().getCrew()
                                                             .getOptions()
                                                             .booleanOption(
                                                                     OptionsConstants.PILOT_APTITUDE_PILOTING))),
-                                    new Integer(damageRight) });
+                                    Integer.valueOf(damageRight) });
         }
 
         // Allow the player to cancel or choose which arm(s) to use.
@@ -1283,7 +1283,7 @@ public class PhysicalDisplay extends StatusBarPhaseDisplay {
                 .getString(
                         "PhysicalDisplay.TrashDialog.message", new Object[] {//$NON-NLS-1$
                                 toHit.getValueAsString(),
-                                new Double(
+                                Double.valueOf(
                                         Compute.oddsAbove(
                                                 toHit.getValue(),
                                                 ce().getCrew()
